--- a/lazyegg-framework-dependencies/pom.xml
+++ b/lazyegg-framework-dependencies/pom.xml
@@ -21,6 +21,11 @@
                 <artifactId>lazyegg-core</artifactId>
                 <version>1.0.0-SNAPSHOT</version>
             </dependency>
+            <dependency>
+                <groupId>io.lazyegg.plugin</groupId>
+                <artifactId>lazyegg-plugin-generator</artifactId>
+                <version>1.0.0-SNAPSHOT</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
