--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
 
     <modules>
         <module>lazyegg-framework-dependencies</module>
+        <module>lazyegg-plugin-generator</module>
         <module>lazyegg-core</module>
         <module>lazyegg-data-db</module>
     </modules>
@@ -33,6 +34,10 @@
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
         </dependency>
     </dependencies>
 
