--- a/lazyegg-framework-dependencies/pom.xml
+++ b/lazyegg-framework-dependencies/pom.xml
@@ -22,6 +22,11 @@
                 <version>1.0.0-SNAPSHOT</version>
             </dependency>
             <dependency>
+                <groupId>io.lazyegg</groupId>
+                <artifactId>lazyegg-auth</artifactId>
+                <version>1.0.0-SNAPSHOT</version>
+            </dependency>
+            <dependency>
                 <groupId>io.lazyegg.plugin</groupId>
                 <artifactId>lazyegg-plugin-generator</artifactId>
                 <version>1.0.0-SNAPSHOT</version>
