--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
         <module>lazyegg-plugin-generator</module>
         <module>lazyegg-core</module>
         <module>lazyegg-data-db</module>
+        <module>lazyegg-auth</module>
     </modules>
 
     <properties>
@@ -57,6 +58,12 @@
                 <version>${cola.version}</version>
                 <type>pom</type>
                 <scope>import</scope>
+            </dependency>
+
+            <dependency>
+                <groupId>com.alibaba</groupId>
+                <artifactId>fastjson</artifactId>
+                <version>2.0.21.graal</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
