分页响应结果 polish

--- a/lazyegg-core/pom.xml
+++ b/lazyegg-core/pom.xml
@@ -30,6 +30,12 @@
             <groupId>com.alibaba.cola</groupId>
             <artifactId>cola-component-exception</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.baomidou</groupId>
+            <artifactId>mybatis-plus</artifactId>
+            <version>3.5.2</version>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 
 
