--- a/lazyegg-auth/pom.xml
+++ b/lazyegg-auth/pom.xml
@@ -17,6 +17,10 @@
 
     <dependencies>
         <dependency>
+            <groupId>io.lazyegg</groupId>
+            <artifactId>lazyegg-core</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-security</artifactId>
         </dependency>
