--- a/lazyegg-data-db/pom.xml
+++ b/lazyegg-data-db/pom.xml
@@ -17,6 +17,10 @@
     </properties>
 
     <dependencies>
+        <dependency>
+            <groupId>io.lazyegg</groupId>
+            <artifactId>lazyegg-core</artifactId>
+        </dependency>
         <!-- 引入fluent-mybatis 运行依赖包, scope为compile -->
         <dependency>
             <groupId>com.github.atool</groupId>
@@ -72,6 +76,18 @@
         <dependency>
             <groupId>com.alibaba.cola</groupId>
             <artifactId>cola-component-exception</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-annotations</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-web</artifactId>
         </dependency>
     </dependencies>
 </project>
