--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,9 @@
         <module>lazyegg-core</module>
         <module>lazyegg-data-db</module>
         <module>lazyegg-auth</module>
+        <module>lazyegg-mq-activemq</module>
+        <module>lazyegg-web</module>
+        <!--        <module>lazyegg-class-loader</module>-->
     </modules>
 
     <properties>
@@ -29,6 +32,8 @@
         <druid.version>1.2.15</druid.version>
         <mybatis.plus.boot.starter.version>3.5.2</mybatis.plus.boot.starter.version>
         <fluent-mybatis.version>1.9.8</fluent-mybatis.version>
+        <fastjson.version>2.0.21.graal</fastjson.version>
+        <querydsl.version>5.0.0</querydsl.version>
     </properties>
 
     <dependencies>
@@ -63,7 +68,13 @@
             <dependency>
                 <groupId>com.alibaba</groupId>
                 <artifactId>fastjson</artifactId>
-                <version>2.0.21.graal</version>
+                <version>${fastjson.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>io.lazyegg</groupId>
+                <artifactId>lazyegg-core</artifactId>
+                <version>${project.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
