--- a/lazyegg-framework-dependencies/pom.xml
+++ b/lazyegg-framework-dependencies/pom.xml
@@ -31,6 +31,11 @@
                 <artifactId>lazyegg-plugin-generator</artifactId>
                 <version>1.0.0-SNAPSHOT</version>
             </dependency>
+            <dependency>
+                <groupId>io.lazyegg</groupId>
+                <artifactId>lazyegg-swagger</artifactId>
+                <version>1.0.0-SNAPSHOT</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
