--- a/lazyegg-core/pom.xml
+++ b/lazyegg-core/pom.xml
@@ -33,7 +33,7 @@
         <dependency>
             <groupId>com.baomidou</groupId>
             <artifactId>mybatis-plus</artifactId>
-            <version>3.5.2</version>
+            <version>${mybatis.plus.boot.starter.version}</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
