--- a/lazyegg-data-db/pom.xml
+++ b/lazyegg-data-db/pom.xml
@@ -22,24 +22,24 @@
             <artifactId>lazyegg-core</artifactId>
         </dependency>
         <!-- 引入fluent-mybatis 运行依赖包, scope为compile -->
-        <dependency>
-            <groupId>com.github.atool</groupId>
-            <artifactId>fluent-mybatis</artifactId>
-            <version>${fluent-mybatis.version}</version>
-            <scope>compile</scope>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>com.github.atool</groupId>-->
+<!--            <artifactId>fluent-mybatis</artifactId>-->
+<!--            <version>${fluent-mybatis.version}</version>-->
+<!--            <scope>compile</scope>-->
+<!--        </dependency>-->
         <!-- 引入fluent-mybatis-processor, scope设置为provider 编译需要，运行时不需要 -->
-        <dependency>
-            <groupId>com.github.atool</groupId>
-            <artifactId>fluent-mybatis-processor</artifactId>
-            <scope>provided</scope>
-            <version>${fluent-mybatis.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.test4j</groupId>
-            <artifactId>fluent-dbtest</artifactId>
-            <version>1.1.1</version>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>com.github.atool</groupId>-->
+<!--            <artifactId>fluent-mybatis-processor</artifactId>-->
+<!--            <scope>provided</scope>-->
+<!--            <version>${fluent-mybatis.version}</version>-->
+<!--        </dependency>-->
+<!--        <dependency>-->
+<!--            <groupId>org.test4j</groupId>-->
+<!--            <artifactId>fluent-dbtest</artifactId>-->
+<!--            <version>1.1.1</version>-->
+<!--        </dependency>-->
 
         <dependency>
             <groupId>com.alibaba</groupId>
@@ -63,11 +63,11 @@
             <artifactId>mysql-connector-java</artifactId>
             <version>8.0.30</version>
         </dependency>
-        <dependency>
-            <groupId>com.h2database</groupId>
-            <artifactId>h2</artifactId>
-            <scope>runtime</scope>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>com.h2database</groupId>-->
+<!--            <artifactId>h2</artifactId>-->
+<!--            <scope>runtime</scope>-->
+<!--        </dependency>-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-aop</artifactId>
