--- a/lazyegg-tenant/pom.xml
+++ b/lazyegg-tenant/pom.xml
@@ -3,11 +3,9 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>io.lazyegg</groupId>
-        <artifactId>lazyegg-framework-dependencies</artifactId>
+        <artifactId>lazyegg-framework</artifactId>
         <version>1.0.0-SNAPSHOT</version>
-        <relativePath>../lazyegg-framework-dependencies/pom.xml</relativePath>
     </parent>
-
     <artifactId>lazyegg-tenant</artifactId>
 
     <name>lazyegg-tenant</name>
@@ -17,11 +15,6 @@
         <dependency>
             <groupId>io.lazyegg</groupId>
             <artifactId>lazyegg-data-db</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>com.google.code.gson</groupId>
-            <artifactId>gson</artifactId>
-            <version>2.8.9</version>
         </dependency>
     </dependencies>
 
