--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,6 @@
     <name>lazyegg-framework-build</name>
 
     <modules>
-        <module>lazyegg-framework-dependencies</module>
         <module>lazyegg-plugin-generator</module>
         <module>lazyegg-core</module>
         <module>lazyegg-data-db</module>
@@ -27,13 +26,13 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
-        <spring-boot.version>2.7.13</spring-boot.version>
-        <cola.version>4.3.0</cola.version>
-        <druid.version>1.2.15</druid.version>
-        <mybatis.plus.boot.starter.version>3.5.3.1</mybatis.plus.boot.starter.version>
-        <fluent-mybatis.version>1.9.8</fluent-mybatis.version>
-        <fastjson.version>2.0.21.graal</fastjson.version>
-        <querydsl.version>5.0.0</querydsl.version>
+<!--        <spring-boot.version>2.7.13</spring-boot.version>-->
+<!--        <cola.version>4.3.0</cola.version>-->
+<!--        <druid.version>1.2.15</druid.version>-->
+<!--        <mybatis.plus.boot.starter.version>3.5.3.1</mybatis.plus.boot.starter.version>-->
+<!--        <fluent-mybatis.version>1.9.8</fluent-mybatis.version>-->
+<!--        <fastjson.version>2.0.21.graal</fastjson.version>-->
+<!--        <querydsl.version>5.0.0</querydsl.version>-->
     </properties>
 
     <dependencies>
@@ -44,11 +43,6 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.yaml</groupId>
-            <artifactId>snakeyaml</artifactId>
-            <version>2.0</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -75,7 +69,6 @@
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
-            <version>3.12.0</version>
         </dependency>
     </dependencies>
 
@@ -83,30 +76,11 @@
     <dependencyManagement>
         <dependencies>
             <dependency>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-dependencies</artifactId>
-                <version>${spring-boot.version}</version>
-                <type>pom</type>
-                <scope>import</scope>
-            </dependency>
-            <dependency>
-                <groupId>com.alibaba.cola</groupId>
-                <artifactId>cola-components-bom</artifactId>
-                <version>${cola.version}</version>
-                <type>pom</type>
-                <scope>import</scope>
-            </dependency>
-
-            <dependency>
-                <groupId>com.alibaba</groupId>
-                <artifactId>fastjson</artifactId>
-                <version>${fastjson.version}</version>
-            </dependency>
-
-            <dependency>
                 <groupId>io.lazyegg</groupId>
-                <artifactId>lazyegg-core</artifactId>
-                <version>${project.version}</version>
+                <artifactId>lazyegg-dependencies</artifactId>
+                <version>1.0.0-SNAPSHOT</version>
+                <scope>import</scope>
+                <type>pom</type>
             </dependency>
         </dependencies>
     </dependencyManagement>
