--- a/lazyegg-database/pom.xml
+++ b/lazyegg-database/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>lazyegg-data-db</artifactId>
+    <artifactId>lazyegg-database</artifactId>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
