--- a/lazyegg-core/pom.xml
+++ b/lazyegg-core/pom.xml
@@ -43,6 +43,12 @@
             <artifactId>cola-component-extension-starter</artifactId>
         </dependency>
 
+        <!-- jasypt 加密-->
+        <dependency>
+            <groupId>com.github.ulisesbocchio</groupId>
+            <artifactId>jasypt-spring-boot-starter</artifactId>
+        </dependency>
+
     </dependencies>
 
 
