--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,8 @@
     <name>lazyegg-framework-build</name>
 
     <modules>
+        <module>lazyegg-bom</module>
+        <module>lazyegg-dependencies</module>
         <module>lazyegg-plugin-generator</module>
         <module>lazyegg-core</module>
         <module>lazyegg-database</module>
