--- a/lazyegg-api-sdk/pom.xml
+++ b/lazyegg-api-sdk/pom.xml
@@ -8,8 +8,9 @@
 
     <parent>
         <groupId>io.lazyegg</groupId>
-        <artifactId>lazyegg-framework</artifactId>
+        <artifactId>lazyegg-framework-parent</artifactId>
         <version>1.0.0-SNAPSHOT</version>
+        <relativePath>../pom.xml</relativePath>
     </parent>
 
 <dependencies>
