--- a/lazyegg-auth/pom.xml
+++ b/lazyegg-auth/pom.xml
@@ -3,8 +3,9 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>io.lazyegg</groupId>
-        <artifactId>lazyegg-framework</artifactId>
+        <artifactId>lazyegg-framework-parent</artifactId>
         <version>1.0.0-SNAPSHOT</version>
+        <relativePath>../pom.xml</relativePath>
     </parent>
     <artifactId>lazyegg-auth</artifactId>
 
