--- a/pom.xml
+++ b/pom.xml
@@ -76,7 +76,7 @@
             <dependency>
                 <groupId>io.lazyegg</groupId>
                 <artifactId>lazyegg-dependencies</artifactId>
-                <version>${project.version}</version>
+                <version>1.0.0-SNAPSHOT</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
