--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
     <groupId>io.lazyegg</groupId>
     <artifactId>lazyegg-framework-parent</artifactId>
     <packaging>pom</packaging>
-    <version>1.0.0-SNAPSHOT</version>
+    <version>1.0.1-SNAPSHOT</version>
     <name>lazyegg-framework</name>
 
     <modules>
@@ -19,6 +19,7 @@
         <module>lazyegg-auth</module>
         <module>lazyegg-swagger</module>
         <module>lazyegg-api-sdk</module>
+        <module>lazyegg-component</module>
     </modules>
 
     <properties>
@@ -76,7 +77,7 @@
             <dependency>
                 <groupId>io.lazyegg</groupId>
                 <artifactId>lazyegg-dependencies</artifactId>
-                <version>1.0.0-SNAPSHOT</version>
+                <version>1.0.1-SNAPSHOT</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
