chore: upgrade snakeyaml to 2.0

--- a/lazyegg-dependencies/pom.xml
+++ b/lazyegg-dependencies/pom.xml
@@ -71,6 +71,12 @@
         <version>${spring-boot.version}</version>
         <type>pom</type>
         <scope>import</scope>
+        <exclusions>
+          <exclusion>
+            <groupId>org.yaml</groupId>
+            <artifactId>snakeyaml</artifactId>
+          </exclusion>
+        </exclusions>
       </dependency>
       <dependency>
         <groupId>com.alibaba.cola</groupId>
