--- a/lazyegg-dependencies/pom.xml
+++ b/lazyegg-dependencies/pom.xml
@@ -101,7 +101,7 @@
       <dependency>
         <groupId>org.yaml</groupId>
         <artifactId>snakeyaml</artifactId>
-        <version>${snakeyaml.version}</version>
+        <version>2.0</version>
       </dependency>
       <dependency>
         <groupId>cn.hutool</groupId>
